; ModuleID = '/home/carl/AnghaBench/esp-idf/components/sdmmc/extr_sdmmc_mmc.c_sdmmc_mmc_send_ext_csd_data.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/sdmmc/extr_sdmmc_mmc.c_sdmmc_mmc_send_ext_csd_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i64, i64, i32, i32, i32 }

@SCF_CMD_ADTC = common dso_local global i32 0, align 4
@SCF_RSP_R1 = common dso_local global i32 0, align 4
@SCF_CMD_READ = common dso_local global i32 0, align 4
@MMC_SEND_EXT_CSD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sdmmc_mmc_send_ext_csd_data(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @esp_ptr_dma_capable(i8* %8)
  %10 = call i32 @assert(i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %12 = load i8*, i8** %5, align 8
  store i8* %12, i8** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %14 = load i64, i64* %6, align 8
  store i64 %14, i64* %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %16 = load i64, i64* %6, align 8
  store i64 %16, i64* %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  %18 = load i32, i32* @SCF_CMD_ADTC, align 4
  %19 = load i32, i32* @SCF_RSP_R1, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @SCF_CMD_READ, align 4
  %22 = or i32 %20, %21
  store i32 %22, i32* %17, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 4
  store i32 0, i32* %23, align 4
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 5
  %25 = load i32, i32* @MMC_SEND_EXT_CSD, align 4
  store i32 %25, i32* %24, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @sdmmc_send_cmd(i32* %26, %struct.TYPE_3__* %7)
  ret i32 %27
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @esp_ptr_dma_capable(i8*) #1

declare dso_local i32 @sdmmc_send_cmd(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
